@@ -104,8 +104,8 @@ class Profile(models.Model):
     birthdate = models.DateTimeField(default=datetime.datetime.now(), blank=True)
     blog = models.URLField(blank=True, core=True)
     about = models.TextField(blank=True)
-    latitude = models.DecimalField(max_digits=8, decimal_places=6, default=40.416706)
-    longitude = models.DecimalField(max_digits=8, decimal_places=6, default=-3.703269)
+    latitude = models.DecimalField(max_digits=8, decimal_places=6, default=-100)
+    longitude = models.DecimalField(max_digits=8, decimal_places=6, default=-100)
     gender = models.CharField(maxlength=1, choices=GENDER_CHOICES, blank=True)
     country = models.ForeignKey(Country, blank=True, null=True)
     location = models.CharField(maxlength=255, blank=True)
